# unsolvable

./: README.md  combos.py  kepler.ipynb  poly.ipynb  pyproject.toml  table.md  tables.ipynb  talk.ipynb  trig.ipynb
