[project]
name = "hardsolutions"
version = "0.1.0"
description = "hard solutions for easy equations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "sympy>=1.13.3",
    "numpy>=1.21.2",
    "matplotlib>=3.4.3",
    "scipy>=1.7.3",
    "seaborn>=0.11.2",
    "scikit-learn>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
